force-app/main/default/objects/FS_Brandsets_Cartridges__c/FS_Brandsets_Cartridges__c.object-meta.xml
<CustomObject>
    <label>Brandset-Cartridges</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brandset-Cartridges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>