force-app/main/default/objects/FS_Brandsets_Cartridges__c/fields/FS_Brandset__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset__c</fullName>
    <label>Brandset</label>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Cartridges</relationshipLabel>
    <relationshipName>Cartridge_Brandsets_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>