force-app/main/default/objects/FS_Brandsets_Cartridges__c/fields/FS_Cartridge__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge__c</fullName>
    <label>Cartridge</label>
    <referenceTo>FS_Cartridge__c</referenceTo>
    <relationshipLabel>Brandsets</relationshipLabel>
    <relationshipName>Cartridge_Brandsets_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>